# Gendiff

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  cli.py  constants.py  gen_diff.py  main.py  open.py  parser.py
gendiff/render/: json_renderer.py  nested_renderer.py  plain_renderer.py  value_change.py
gendiff/tests/: test_gendiff.py  test_render.py
gendiff/tests/fixtures/: json  nested  plain
hexlet_code/scripts/: gendiff.py
tests/: test_gendiff.py  test_parser.py  test_render.py
